--- a/english.html
+++ b/english.html
@@ -35,7 +35,7 @@
               <li><a class="enlaces" href="#contacto">Let's Talk</a></li>
             </ul>
           </div>
-          <div class="contenedor-redes">
+          <div class="contenedor-redes redes_lg">
             <ul>
               <li>
                 <a class="enlaces" href="index.html">
@@ -50,11 +50,6 @@
               <li>
                 <a class="enlaces" href="https://github.com/danielmedtar" target="_blank">
                   <span class="iconify" data-icon="logos:github-icon" data-inline="false"></span>
-                </a>
-              </li>
-              <li>
-                <a class="enlaces" href="https://medium.com/@dmedinat.ar" target="_blank">
-                  <span class="iconify" data-icon="cib:medium" data-inline="false"></span>
                 </a>
               </li>
               <li>
@@ -79,6 +74,36 @@
       <li><a href="#mis-proyectos">My Projects</a></li>
       <li><a href="#testimonios">Recommendations</a></li>
       <li><a href="#contacto">Let's Talk</a></li>
+
+      <div class="contenedor-redes">
+        <ul>
+          <li>
+            <a class="enlaces" href="english.html" target="_blank">
+              ENG</span>
+            </a>
+          </li>
+          <li>
+            <a class="enlaces" href="https://www.linkedin.com/in/medinataribadaniel/" target="_blank">
+              <span class="iconify" data-icon="logos:linkedin-icon" data-inline="false"></span>
+            </a>
+          </li>
+          <li>
+            <a class="enlaces" href="https://github.com/danielmedtar" target="_blank">
+              <span class="iconify" data-icon="logos:github-icon" data-inline="false"></span>
+            </a>
+          </li>
+          <li>
+            <a class="enlaces" href="https://wa.me/+5492213649072" target="_blank">
+              <span class="iconify" data-icon="logos:whatsapp" data-inline="false"></span>
+            </a>
+          </li>
+          <li>
+            <a class="enlaces" href="mailto:dmedinat.ar@gmail.com" target="_blank">
+              <span class="iconify" data-icon="logos:google-gmail" data-inline="false"></span>
+            </a>
+          </li>
+        </ul>
+      </div>
     </ul>          
   </header>
 
