--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
               <li><a class="enlaces" href="#contacto">Hablemos</a></li>
             </ul>
           </div>
-          <div class="contenedor-redes">
+          <div class="contenedor-redes redes_lg">
             <ul>
               <li>
-                <a class="enlaces" href="english.html" target="_blank">
+                <a class="enlaces" href="english.html">
                   ENG</span>
                 </a>
               </li>
@@ -50,11 +50,6 @@
               <li>
                 <a class="enlaces" href="https://github.com/danielmedtar" target="_blank">
                   <span class="iconify" data-icon="logos:github-icon" data-inline="false"></span>
-                </a>
-              </li>
-              <li>
-                <a class="enlaces" href="https://medium.com/@dmedinat.ar" target="_blank">
-                  <span class="iconify" data-icon="cib:medium" data-inline="false"></span>
                 </a>
               </li>
               <li>
@@ -79,7 +74,37 @@
       <li><a href="#mis-proyectos">Mis Proyectos</a></li>
       <li><a href="#testimonios">Testimonios</a></li>
       <li><a href="#contacto">Hablemos</a></li>
-    </ul>          
+
+      <div class="contenedor-redes">
+        <ul>
+          <li>
+            <a class="enlaces" href="english.html" target="_blank">
+              ENG</span>
+            </a>
+          </li>
+          <li>
+            <a class="enlaces" href="https://www.linkedin.com/in/medinataribadaniel/" target="_blank">
+              <span class="iconify" data-icon="logos:linkedin-icon" data-inline="false"></span>
+            </a>
+          </li>
+          <li>
+            <a class="enlaces" href="https://github.com/danielmedtar" target="_blank">
+              <span class="iconify" data-icon="logos:github-icon" data-inline="false"></span>
+            </a>
+          </li>
+          <li>
+            <a class="enlaces" href="https://wa.me/+5492213649072" target="_blank">
+              <span class="iconify" data-icon="logos:whatsapp" data-inline="false"></span>
+            </a>
+          </li>
+          <li>
+            <a class="enlaces" href="mailto:dmedinat.ar@gmail.com" target="_blank">
+              <span class="iconify" data-icon="logos:google-gmail" data-inline="false"></span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </ul>       
   </header>
 
   <main id="home">
