--- a/index.html
+++ b/index.html
@@ -1,24 +1,34 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5J4WPET5RS"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-5J4WPET5RS');
+    </script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="desarrollo web, front end, html, css, javascript, web developer, Daniel Medina">
+    <meta name="keywords" content="desarrollo web, front end, html, css, javascript, web developer, Daniel Medina, Maquetador Web, Profesor">
     <meta property="og:title" content="Daniel Medina | Portfolio">
     <meta name="author" content="Daniel Medina Tariba" />
     <meta property="og:url" content="https://danielmedinatariba.com/" />
     <meta name="image" property="og:image" content="https://danielmedtar.github.io/img/daniel-icon.ico">
     <meta name="description" property="og:description" content="Bienvenidos a mi Sitio Web. Acá podrán saber un poco mas de mí, conocimientos y proyectos. Conóceme un poco más y ¿Por qué no? Hablemos.">
-    <meta name="theme-color" content="rgba(249, 198, 16, .5)">
+    <meta name="theme-color" content="#393839">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,100&family=Zilla+Slab:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="shortcut icon" href="img/daniel-icon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/daniel_medina_tariba.png" type="image/x-icon">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Daniel Medina</title>
+    <link rel="canonical" href="https://danielmedinatariba.com">
+    <title>Desarrollador Web | Daniel Medina</title>
 </head>
 <body>
   <header class="container-header">         
@@ -54,7 +64,7 @@
               </li>
               <li>
                 <a class="enlaces" href="https://wa.me/+5492213649072" target="_blank">
-                  <span class="iconify" data-icon="logos:whatsapp" data-inline="false"></span>
+                  <span class="iconify" data-icon="logos:whatsapp-icon"></span>
                 </a>
               </li>
               <li>
@@ -108,18 +118,18 @@
   </header>
 
   <main id="home">
-    <img src="img/foto_prueba3.png" alt="avatar-daniel" class="avatar animate__animated animate__zoomIn">
+    <img src="img/daniel_medina_tariba.png" alt="Desarrollador Web Daniel Medina" title="Desarrollador Web Daniel Medina" class="avatar animate__animated animate__zoomIn">
     <div class="texto-main">
       <h1 class="animate__animated animate__fadeInLeft">Daniel Medina</h1>
       <p class="parrafo-main"> - Front End Developer -</p>
 
       <div class="container-botones_cv">
         <button class="animate__animated animate__bounceIn">
-          <a href="https://drive.google.com/file/d/1pP3KshfbXjOsvUDbyge-AtktouLfmGAG/view?usp=sharing" target="_blank">CV en Español</a>
+          <a href="https://drive.google.com/file/d/16ZiicWyAmV5QLdMFnhazovMxaKZqwCmK/view?usp=sharing" target="_blank">CV en Español</a>
         </button>
   
         <button class="animate__animated animate__bounceIn">
-          <a href="https://drive.google.com/file/d/1aGmTfr8kNMtu0Y7ElK-zwujkkh52Cbnb/view?usp=sharing" target="_blank">English CV</a>
+          <a href="https://drive.google.com/file/d/1GLFud6zMxe-R2DwM383bcwEk0S6X_XEg/view?usp=sharing" target="_blank">English CV</a>
         </button>
       </div>
     </div>
@@ -129,16 +139,16 @@
     <div class="container-secciones">
       <h2>Sobre mi</h2>
       <div class="container-secciones__textos">
-        <p>Hola a todos, Les cuento un poco acerca de mi: Soy Abogado de profesión, pero cuando emigré a Argentina en 2017, decidí dar un giro a mi carrera y me incliné por la tecnología, específicamente por el Desarrollo Web Front End, estando siempre dispuesto, tanto a mantener las buenas prácticas de programación, como al aprendizaje constante.</p>
+        <p>Hola a todos, les cuento un poco acerca de mi: Soy Abogado de profesión, pero decidí dar un giro a mi carrera y me incliné por la tecnología, específicamente por el <strong>Desarrollo Web Front End</strong>, estando siempre dispuesto a mantener las buenas prácticas de programación, de maquetación y de SEO, lo cual hace que me mantenga en aprendizaje constante.</p>
 
-        <p>Actualmente, me desempeño como IT Support Analyst en Dentsu International realizando el mantenimiento y actualización del contenido de 141 sitios web de una importante empresa del rubro automotriz, todo esto en conjunto con un equipo que incluye otros Desarrolladores, Diseñadores Gráficos, Copywriters y Ejecutivos de Cuentas.</p>
+        <p>Actualmente, me desempeño como Support Analyst en <strong>Dentsu International</strong> realizando el mantenimiento y actualización del contenido de 141 sitios web de una importante red de concesionarios del rubro automotriz; trabajando en conjunto con un equipo que incluye otros Desarrolladores, Diseñadores Gráficos, Copywriters y Ejecutivos de Cuentas, definiendo estrategias muy enfocadas en buenas prácticas de Maquetación, UX/UI y SEO con el fin de potenciar la recepción de leads y por lo tanto las ventas de estos concesionarios.</p>
 
-        <p>Además, me desempeño como Profesor del curso de Desarrollo Web de Coderhouse, lo que me motiva a estar siempre actualizado para brindarles una buena experiencia de aprendizaje a mis alumnos.</p>           
+        <p>Además, me desempeño como Profesor del curso de Desarrollo Web de <strong>Coderhouse</strong>, lo que me motiva a estar siempre actualizado para brindarles una buena experiencia de aprendizaje a mis alumnos.</p>           
       </div>
     </div>
   </section>
 
-  <section id="que-hago" class="padding-section fondo-gris">
+  <section id="que-hago" class="padding-section fondo-negro">
     <div class="container-secciones">
       <h2>¿Qué hago?</h2>
       <div class="container-secciones__textos">
@@ -178,7 +188,7 @@
 
   <section id="mis-proyectos" class="padding-section fondo-blanco">
     <div class="container-secciones testimonios">
-      <h2>Mis<br>proyectos</h2>
+      <h2>Mis proyectos</h2>
       <div class="container-secciones__textos">
         <p>Estos son algunos de los proyectos que he desarrollado:</p>
         <div id="container-proyectos">
@@ -188,7 +198,7 @@
     </div>
   </section>
 
-  <section id="testimonios" class="padding-section fondo-gris">
+  <section id="testimonios" class="padding-section fondo-negro">
     <div class="container-secciones testimonios">
       <h2>Testimonios</h2>
       <div class="container-secciones__textos">
@@ -243,7 +253,7 @@
     </div>
   </section>
 
-  <footer class="fondo-gris">
+  <footer class="fondo-negro">
     <p>Desarrollado por <span><a href="https://github.com/danielmedtar" target="_blank">Daniel Medina &copy;</a></span></p>
   </footer>
   
