--- a/english.html
+++ b/english.html
@@ -10,13 +10,14 @@
     <meta property="og:url" content="https://danielmedinatariba.com/" />
     <meta name="image" property="og:image" content="https://danielmedtar.github.io/img/daniel-icon.ico">
     <meta name="description" property="og:description" content="Welcome to my Web Site. Here you can know a little more about me, knowledge and projects. Let's meet.">
-    <meta name="theme-color" content="rgba(249, 198, 16, .5)">
+    <meta name="theme-color" content="#393839">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,100&family=Zilla+Slab:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="shortcut icon" href="img/daniel-icon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/daniel_medina_tariba.png" type="image/x-icon">
+    <link rel="canonical" href="https://danielmedinatariba.com">
     <link rel="stylesheet" href="css/styles.css">
     <title>Daniel Medina</title>
 </head>
@@ -39,7 +40,7 @@
             <ul>
               <li>
                 <a class="enlaces" href="index.html">
-                  ESP</span>
+                  ESP
                 </a>
               </li>
               <li>
@@ -54,7 +55,7 @@
               </li>
               <li>
                 <a class="enlaces" href="https://wa.me/+5492213649072" target="_blank">
-                  <span class="iconify" data-icon="logos:whatsapp" data-inline="false"></span>
+                  <span class="iconify" data-icon="logos:whatsapp-icon"></span>
                 </a>
               </li>
               <li>
@@ -108,7 +109,7 @@
   </header>
 
   <main id="home">
-    <img src="img/foto_prueba3.png" alt="avatar-daniel" class="avatar animate__animated animate__zoomIn">
+    <img src="img/daniel_medina_tariba.png" alt="Web Developer Daniel Medina" title="Web Developer Daniel Medina" class="avatar animate__animated animate__zoomIn">
     <div class="texto-main">
       <h1 class="animate__animated animate__fadeInLeft">Daniel Medina</h1>
       <p class="parrafo-main"> - Front End Developer -</p>
@@ -138,7 +139,7 @@
     </div>
   </section>
 
-  <section id="que-hago" class="padding-section fondo-gris">
+  <section id="que-hago" class="padding-section fondo-negro">
     <div class="container-secciones">
       <h2>Knowledge</h2>
       <div class="container-secciones__textos">
@@ -188,7 +189,7 @@
     </div>
   </section>
 
-  <section id="testimonios" class="padding-section fondo-gris">
+  <section id="testimonios" class="padding-section fondo-negro">
     <div class="container-secciones testimonios">
       <h2>Recommendations</h2>
       <div class="container-secciones__textos">
@@ -243,7 +244,7 @@
     </div>
   </section>
 
-  <footer class="fondo-gris">
+  <footer class="fondo-negro">
     <p>Developer: <span><a href="https://github.com/danielmedtar" target="_blank">Daniel Medina &copy;</a></span></p>
   </footer>
   
