--- a/english.html
+++ b/english.html
@@ -19,7 +19,7 @@
     <link rel="shortcut icon" href="img/daniel_medina_tariba.png" type="image/x-icon">
     <link rel="canonical" href="https://danielmedinatariba.com">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Daniel Medina</title>
+    <title>Web Developer | Daniel Medina</title>
 </head>
 <body>
   <header class="container-header">         
