--- a/english.html
+++ b/english.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="Daniel Medina">
     <meta name="author" content="Daniel Medina Tariba" />
     <meta property="og:url" content="https://danielmedinatariba.com/" />
-    <meta name="image" property="og:image" content="https://danielmedtar.github.io/img/daniel-icon.ico">
+    <meta name="image" property="og:image" content="https://danielmedtar.github.io/img/daniel_medina_tariba.png">
     <meta name="description" property="og:description" content="Welcome to my Web Site. Here you can know a little more about me, knowledge and projects. Let's meet.">
     <meta name="theme-color" content="#393839">
     <link rel="preconnect" href="https://fonts.gstatic.com">
