--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:title" content="Daniel Medina | Portfolio">
     <meta name="author" content="Daniel Medina Tariba" />
     <meta property="og:url" content="https://danielmedinatariba.com/" />
-    <meta name="image" property="og:image" content="https://danielmedtar.github.io/img/daniel-icon.ico">
+    <meta name="image" property="og:image" content="https://danielmedtar.github.io/img/daniel_medina_tariba.png">
     <meta name="description" property="og:description" content="Bienvenidos a mi Sitio Web. Acá podrán saber un poco mas de mí, conocimientos y proyectos. Conóceme un poco más y ¿Por qué no? Hablemos.">
     <meta name="theme-color" content="#393839">
     <link rel="preconnect" href="https://fonts.gstatic.com">
