--- a/english.html
+++ b/english.html
@@ -22,7 +22,7 @@
     <title>Web Developer | Daniel Medina</title>
 </head>
 <body>
-  <header class="container-header">         
+  <header id="home" class="container-header">         
     <nav>
       <div class="nav-wrapper">
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons"><span class="iconify" data-icon="ci:hamburger" data-inline="false"></span></i></a>
@@ -108,7 +108,7 @@
     </ul>          
   </header>
 
-  <main id="home">
+  <main>
     <img src="img/daniel_medina_tariba.png" alt="Web Developer Daniel Medina" title="Web Developer Daniel Medina" class="avatar animate__animated animate__zoomIn">
     <div class="texto-main">
       <h1 class="animate__animated animate__fadeInLeft">Daniel Medina</h1>
@@ -130,11 +130,11 @@
     <div class="container-secciones">
       <h2>About Me</h2>
       <div class="container-secciones__textos">
-        <p>Hi everyone. I'll tell you a little about myself: I am a lawyer by profession, but when I emigrated to Argentina in 2017, I decided to turn my career around and leaned towards technology, specifically Front End Web Development, always trying to maintain good programming practices and constant learning.</p>
+        <p>Hi everyone. I'll tell you a little about myself: I am a lawyer by profession, but when I emigrated to Argentina in 2017, I decided to turn my career around and leaned towards technology, specifically <strong>Front End Web Development</strong>, always trying to maintain <strong>good programming practices</strong> and constant learning.</p>
 
-        <p>Currently, I work as an IT Support Analyst at Dentsu International, maintaining and updating the content of 141 websites of an important company in the automotive industry, all this in conjunction with a team that includes other Developers, Graphic Designers, Copywriters and Account Executives.</p>
+        <p>Currently, I work as <strong>Support Analyst</strong> at Dentsu International, maintaining and updating the content of 141 websites of an important company in the automotive industry, all this in conjunction with a team that includes other Developers, Graphic Designers, Copywriters and Account Executives.</p>
 
-        <p>Also, I work as a Professor of the <a href="https://www.coderhouse.com/" class="coderhouse" target="_blank">Coderhouse</a> Web Development course, which motivates me to always be up to date to provide a good learning experience for my students.</p>           
+        <p>Also, I work as a <strong>Professor</strong> of the <a href="https://www.coderhouse.com/" class="coderhouse" target="_blank">Coderhouse</a> Web Development course, which motivates me to always be up to date to provide a good learning experience for my students.</p>           
       </div>
     </div>
   </section>
@@ -143,7 +143,9 @@
     <div class="container-secciones">
       <h2>Knowledge</h2>
       <div class="container-secciones__textos">
-        <p>Among the technologies with which I have worked the most are: HTML 5, CSS3, JavaScript, jQuery, Bootstrap, Materialize and SASS for everything related to development; GIT for version control, and Github as an online code repository and now, currently venturing into the world of React JS</p>
+        <p>Among the technologies with which I have worked the most are: <strong>HTML 5</strong>, <strong>CSS3</strong>, <strong>JavaScript</strong>, jQuery, Bootstrap, Materialize and SASS for everything related to development; <strong>GIT</strong> for version control, and Github as an online code repository.</p>
+
+        <p>About SEO tools i've work with <strong>Google Analytics</strong>, <strong>Google Search Console</strong>, <strong>Google Tag Manager</strong>, and <strong>Adobe Analytics</strong>.</p>
         <div class="carousel carousel-tech">
           <a class="carousel-item" href="#one!">
             <img src="img/html-5.svg" alt="logo html">
