--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <title>Desarrollador Web | Daniel Medina</title>
 </head>
 <body>
-  <header class="container-header">         
+  <header id="home" class="container-header">         
     <nav>
       <div class="nav-wrapper">
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons"><span class="iconify" data-icon="ci:hamburger" data-inline="false"></span></i></a>
@@ -117,7 +117,7 @@
     </ul>       
   </header>
 
-  <main id="home">
+  <main>
     <img src="img/daniel_medina_tariba.png" alt="Desarrollador Web Daniel Medina" title="Desarrollador Web Daniel Medina" class="avatar animate__animated animate__zoomIn">
     <div class="texto-main">
       <h1 class="animate__animated animate__fadeInLeft">Daniel Medina</h1>
@@ -139,11 +139,11 @@
     <div class="container-secciones">
       <h2>Sobre mi</h2>
       <div class="container-secciones__textos">
-        <p>Hola a todos, les cuento un poco acerca de mi: Soy Abogado de profesión, pero decidí dar un giro a mi carrera y me incliné por la tecnología, específicamente por el <strong>Desarrollo Web Front End</strong>, estando siempre dispuesto a mantener las buenas prácticas de programación, de maquetación y de SEO, lo cual hace que me mantenga en aprendizaje constante.</p>
+        <p>Hola a todos, les cuento un poco acerca de mi: Soy Abogado de profesión, pero decidí dar un giro a mi carrera y me incliné por la tecnología, específicamente por el <strong>Desarrollo Web Front End</strong>, estando siempre dispuesto a mantener las <strong>buenas prácticas de programación</strong>, de <strong>maquetación</strong> y de <strong>SEO</strong>, lo cual hace que me mantenga en aprendizaje constante.</p>
 
         <p>Actualmente, me desempeño como Support Analyst en <strong>Dentsu International</strong> realizando el mantenimiento y actualización del contenido de 141 sitios web de una importante red de concesionarios del rubro automotriz; trabajando en conjunto con un equipo que incluye otros Desarrolladores, Diseñadores Gráficos, Copywriters y Ejecutivos de Cuentas, definiendo estrategias muy enfocadas en buenas prácticas de Maquetación, UX/UI y SEO con el fin de potenciar la recepción de leads y por lo tanto las ventas de estos concesionarios.</p>
 
-        <p>Además, me desempeño como Profesor del curso de Desarrollo Web de <strong>Coderhouse</strong>, lo que me motiva a estar siempre actualizado para brindarles una buena experiencia de aprendizaje a mis alumnos.</p>           
+        <p>Además, me desempeño como <strong>Profesor</strong> del curso de <strong>Desarrollo Web</strong> de <strong>Coderhouse</strong>, lo que me motiva a estar siempre actualizado para brindarles una buena experiencia de aprendizaje a mis alumnos.</p>           
       </div>
     </div>
   </section>
@@ -152,7 +152,10 @@
     <div class="container-secciones">
       <h2>¿Qué hago?</h2>
       <div class="container-secciones__textos">
-        <p>Entre las tecnologías con las que más he trabajado están: HTML 5, CSS3, JavaScript, jQuery, Bootstrap, Materialize y SASS para todo lo relacionado con el desarrollo; GIT para control de versiones, y Github como repositorio de código on-line y ahora, actualmente incursionando en el mundo de React JS.</p>
+        <p>Entre las tecnologías con las que más he trabajado están: <strong>HTML 5</strong>, <strong>CSS3</strong>, <strong> JavaScript</strong>, jQuery, Bootstrap, Materialize y SASS para todo lo relacionado con el desarrollo; <strong>GIT</strong> para control de versiones, y Github como repositorio de código.</p>
+
+        <p>En cuanto a herramientas SEO estoy familiarizado con <strong>Google Analytics</strong>, <strong>Google Search Console</strong>, <strong>Google Tag Manager</strong>, y <strong>Adobe Analytics</strong>.</p>
+
         <div class="carousel carousel-tech">
           <a class="carousel-item" href="#one!">
             <img src="img/html-5.svg" alt="logo html">
