--- a/english.html
+++ b/english.html
@@ -39,7 +39,7 @@
           <div class="contenedor-redes redes_lg">
             <ul>
               <li>
-                <a class="enlaces" href="index.html">
+                <a class="enlaces" href="index">
                   ESP
                 </a>
               </li>
@@ -79,7 +79,7 @@
       <div class="contenedor-redes">
         <ul>
           <li>
-            <a class="enlaces" href="english.html" target="_blank">
+            <a class="enlaces" href="english" target="_blank">
               ENG</span>
             </a>
           </li>
@@ -116,11 +116,11 @@
 
       <div class="container-botones_cv">
         <button class="animate__animated animate__bounceIn">
-          <a href="https://drive.google.com/file/d/1pP3KshfbXjOsvUDbyge-AtktouLfmGAG/view?usp=sharing" target="_blank">Spanish CV</a>
+          <a href="https://drive.google.com/file/d/16ZiicWyAmV5QLdMFnhazovMxaKZqwCmK/view" target="_blank">Spanish CV</a>
         </button>
   
         <button class="animate__animated animate__bounceIn">
-          <a href="https://drive.google.com/file/d/1aGmTfr8kNMtu0Y7ElK-zwujkkh52Cbnb/view?usp=sharing" target="_blank">English CV</a>
+          <a href="https://drive.google.com/file/d/1GLFud6zMxe-R2DwM383bcwEk0S6X_XEg/view" target="_blank">English CV</a>
         </button>
       </div>
     </div>
@@ -146,34 +146,57 @@
         <p>Among the technologies with which I have worked the most are: <strong>HTML 5</strong>, <strong>CSS3</strong>, <strong>JavaScript</strong>, jQuery, Bootstrap, Materialize and SASS for everything related to development; <strong>GIT</strong> for version control, and Github as an online code repository.</p>
 
         <p>About SEO tools i've work with <strong>Google Analytics</strong>, <strong>Google Search Console</strong>, <strong>Google Tag Manager</strong>, and <strong>Adobe Analytics</strong>.</p>
-        <div class="carousel carousel-tech">
-          <a class="carousel-item" href="#one!">
-            <img src="img/html-5.svg" alt="logo html">
-          </a>
-          <a class="carousel-item" href="#two!">
-            <img src="img/css-3.svg" alt="logo css">
-          </a>
-          <a class="carousel-item" href="#three!">
-            <img src="img/javascript.svg" alt="logo javascript">
-          </a>
-          <a class="carousel-item" href="#four!">
-            <img src="img/jquery.svg" alt="logo jquery">
-          </a>
-          <a class="carousel-item" href="#five!">
-            <img src="img/file-type-scss.svg" alt="logo sass">
-          </a>
-          <a class="carousel-item" href="#six!">
-            <img src="img/bootstrap.svg" alt="logo bootstrap">
-          </a>
-          <a class="carousel-item" href="#seven!">
-            <img src="img/git.svg" alt="logo git">
-          </a>
-          <a class="carousel-item" href="#eigth!">
-            <img src="img/github-octocat.svg" alt="logo github">
-          </a>
-          <a class="carousel-item" href="#nine!">
-            <img src="img/materializecss.svg" alt="logo materialize">
-          </a>
+        
+        <div class="banner-techs">
+          <div class="banner">
+            <img src="img/html-5.svg" alt="HTML" title="HTML 5">
+            <p>HTML 5</p>
+          </div>
+
+          <div class="banner">
+            <img src="img/css-3.svg" alt="CSS" title="Logo CSS">
+            <p>CSS 3</p>
+          </div>
+
+          <div class="banner">
+            <img src="img/javascript.svg" alt="JavaScript" title="Logo JavaScript">
+            <p>JavaScript</p>
+          </div>
+
+          <div class="banner">
+            <img src="img/React-icon.svg" alt="React Js" title="Logo React Js">
+            <p>React Js</p>
+          </div>
+
+          <div class="banner">
+            <img src="img/git.svg" alt="GIT" title="Logo GIT">
+            <p>GIT</p>
+          </div>
+
+          <div class="banner">
+            <img src="img/github-octocat.svg" alt="Github" title="Logo Github">
+            <p>Github</p>
+          </div>
+
+          <div class="banner">
+            <img src="img/google-search-console.svg" alt="Google Search Console" title="Logo Google Search Console">
+            <p>Google Search Console</p>
+          </div>
+
+          <div class="banner">
+            <img src="img/file-type-scss.svg" alt="SASS" title="Logo SASS">
+            <p>SASS</p>
+          </div>
+
+          <div class="banner">
+            <img src="img/bootstrap.svg" alt="Bootstrap" title="Logo Bootstrap">
+            <p>Bootstrap</p>
+          </div>
+
+          <div class="banner">
+            <img src="img/materializecss.svg" alt="Materialize" title="Logo Materialize">
+            <p>Materialize 3</p>
+          </div>
         </div>
       </div>
     </div>
