--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <link rel="shortcut icon" href="img/daniel_medina_tariba.png" type="image/x-icon">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="canonical" href="https://danielmedinatariba.com">
+    <link rel="alternate" href="https://danielmedinatariba.com/english" hreflang="en-us">
     <title>Desarrollador Web | Daniel Medina</title>
 </head>
 <body>
@@ -48,7 +49,7 @@
           <div class="contenedor-redes redes_lg">
             <ul>
               <li>
-                <a class="enlaces" href="english.html">
+                <a class="enlaces" href="english">
                   ENG</span>
                 </a>
               </li>
@@ -88,7 +89,7 @@
       <div class="contenedor-redes">
         <ul>
           <li>
-            <a class="enlaces" href="english.html" target="_blank">
+            <a class="enlaces" href="english" target="_blank">
               ENG</span>
             </a>
           </li>
@@ -156,42 +157,64 @@
 
         <p>En cuanto a herramientas SEO estoy familiarizado con <strong>Google Analytics</strong>, <strong>Google Search Console</strong>, <strong>Google Tag Manager</strong>, y <strong>Adobe Analytics</strong>.</p>
 
-        <div class="carousel carousel-tech">
-          <a class="carousel-item" href="#one!">
-            <img src="img/html-5.svg" alt="logo html">
-          </a>
-          <a class="carousel-item" href="#two!">
-            <img src="img/css-3.svg" alt="logo css">
-          </a>
-          <a class="carousel-item" href="#three!">
-            <img src="img/javascript.svg" alt="logo javascript">
-          </a>
-          <a class="carousel-item" href="#four!">
-            <img src="img/jquery.svg" alt="logo jquery">
-          </a>
-          <a class="carousel-item" href="#five!">
-            <img src="img/file-type-scss.svg" alt="logo sass">
-          </a>
-          <a class="carousel-item" href="#six!">
-            <img src="img/bootstrap.svg" alt="logo bootstrap">
-          </a>
-          <a class="carousel-item" href="#seven!">
-            <img src="img/git.svg" alt="logo git">
-          </a>
-          <a class="carousel-item" href="#eigth!">
-            <img src="img/github-octocat.svg" alt="logo github">
-          </a>
-          <a class="carousel-item" href="#nine!">
-            <img src="img/materializecss.svg" alt="logo materialize">
-          </a>
+        <div class="banner-techs">
+          <div class="banner">
+            <img src="img/html-5.svg" alt="HTML" title="HTML 5">
+            <p>HTML 5</p>
+          </div>
+
+          <div class="banner">
+            <img src="img/css-3.svg" alt="CSS" title="Logo CSS">
+            <p>CSS 3</p>
+          </div>
+
+          <div class="banner">
+            <img src="img/javascript.svg" alt="JavaScript" title="Logo JavaScript">
+            <p>JavaScript</p>
+          </div>
+
+          <div class="banner">
+            <img src="img/React-icon.svg" alt="React Js" title="Logo React Js">
+            <p>React Js</p>
+          </div>
+
+          <div class="banner">
+            <img src="img/git.svg" alt="GIT" title="Logo GIT">
+            <p>GIT</p>
+          </div>
+
+          <div class="banner">
+            <img src="img/github-octocat.svg" alt="Github" title="Logo Github">
+            <p>Github</p>
+          </div>
+
+          <div class="banner">
+            <img src="img/google-search-console.svg" alt="Google Search Console" title="Logo Google Search Console">
+            <p>Google Search Console</p>
+          </div>
+
+          <div class="banner">
+            <img src="img/file-type-scss.svg" alt="SASS" title="Logo SASS">
+            <p>SASS</p>
+          </div>
+
+          <div class="banner">
+            <img src="img/bootstrap.svg" alt="Bootstrap" title="Logo Bootstrap">
+            <p>Bootstrap</p>
+          </div>
+
+          <div class="banner">
+            <img src="img/materializecss.svg" alt="Materialize" title="Logo Materialize">
+            <p>Materialize 3</p>
+          </div>
         </div>
       </div>
     </div>
   </section>
-
+  
   <section id="mis-proyectos" class="padding-section fondo-blanco">
     <div class="container-secciones testimonios">
-      <h2>Mis proyectos</h2>
+      <h2>Algunos proyectos</h2>
       <div class="container-secciones__textos">
         <p>Estos son algunos de los proyectos que he desarrollado:</p>
         <div id="container-proyectos">
