--- a/english.html
+++ b/english.html
@@ -195,7 +195,7 @@
 
           <div class="banner">
             <img src="img/materializecss.svg" alt="Materialize" title="Logo Materialize">
-            <p>Materialize 3</p>
+            <p>Materialize</p>
           </div>
         </div>
       </div>
