--- a/english.html
+++ b/english.html
@@ -39,7 +39,7 @@
           <div class="contenedor-redes redes_lg">
             <ul>
               <li>
-                <a class="enlaces" href="index">
+                <a class="enlaces" href="index.html">
                   ESP
                 </a>
               </li>
@@ -79,8 +79,8 @@
       <div class="contenedor-redes">
         <ul>
           <li>
-            <a class="enlaces" href="english" target="_blank">
-              ENG</span>
+            <a class="enlaces" href="index.html" target="_blank">
+              ES</span>
             </a>
           </li>
           <li>
