--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <div class="contenedor-redes redes_lg">
             <ul>
               <li>
-                <a class="enlaces" href="english">
+                <a class="enlaces" href="english.html">
                   ENG</span>
                 </a>
               </li>
@@ -89,7 +89,7 @@
       <div class="contenedor-redes">
         <ul>
           <li>
-            <a class="enlaces" href="english" target="_blank">
+            <a class="enlaces" href="english.html" target="_blank">
               ENG</span>
             </a>
           </li>
