--- a/english.html
+++ b/english.html
@@ -246,7 +246,7 @@
         </div>        
         
         <p>Or leave me a message in the form</p>
-        <form action="https://formspree.io/f/xjvlladv" method="POST">
+        <form action="form.php" method="POST">
           <label for="nombre">Name</label>
           <input type="text" placeholder="Your Name" id="nombre" name="name" required>
 
@@ -260,8 +260,8 @@
           <textarea name="message" id="mensaje" placeholder="Leave me your message"></textarea>
 
           <div class="botones-form">
-            <button type="submit">Send</button>
-            <button type="reset">Reset</button>
+            <input type="submit" value="Send">
+            <input type="reset" value="Reset">
           </div>
         </form>
       </div>
