--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 
     gtag('config', 'G-5J4WPET5RS');
     </script>
+
+    <!-- FORM -->
+    <script src="https://www.google.com/recaptcha/api.js"></script>
+    <script>
+      function onSubmit(token) {
+        document.getElementById("demo-form").submit();
+      }
+    </script>
+
+    <!-- inicio metas -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -270,8 +280,8 @@
           <textarea name="message" id="mensaje" placeholder="Dejame tu mensaje o solicitud de contacto"></textarea>
 
           <div class="botones-form">
-            <input type="submit" value="Enviar">
-            <input type="reset" value="Limpiar formulario">
+            <button class="g-recaptcha" data-sitekey="reCAPTCHA_site_key" data-callback='onSubmit' data-action='submit'>Enviar</button>
+            <button type="reset">Limpiar formulario</button>
           </div>
         </form>
       </div>
