moving fixed button

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
     <p>Desarrollado por <span><a href="https://github.com/danielmedtar" target="_blank">Daniel Medina &copy;</a></span></p>
   </footer>
   
-  <div class="fixed-action-btn">
+  <div class="fixed-action-btn boton-fijo">
     <a class="subir" href="#home">
       <span class="iconify flecha" data-icon="bi:arrow-up-circle" data-inline="false"></span>
     </a>
