--- a/index.html
+++ b/index.html
@@ -27,14 +27,13 @@
     <meta property="og:title" content="Daniel Medina | Portfolio">
     <meta name="author" content="Daniel Medina Tariba" />
     <meta property="og:url" content="https://danielmedinatariba.com/" />
-    <meta name="image" property="og:image" content="https://danielmedtar.github.io/img/daniel_medina_tariba.png">
+    <meta name="image" property="og:image" content="https://danielmedtar.github.io/img/daniel_medina.webp">
     <meta name="description" property="og:description" content="Bienvenidos a mi Sitio Web. Acá podrán saber un poco mas de mí, conocimientos y proyectos. Conóceme un poco más y ¿Por qué no? Hablemos.">
     <meta name="theme-color" content="#393839">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,100&family=Zilla+Slab:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="shortcut icon" href="img/daniel_medina_tariba.png" type="image/x-icon">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="canonical" href="https://danielmedinatariba.com">
@@ -115,7 +114,7 @@
           </li>
           <li>
             <a class="enlaces" href="https://wa.me/+5492213649072" target="_blank">
-              <span class="iconify" data-icon="logos:whatsapp" data-inline="false"></span>
+              <span class="iconify" data-icon="logos:whatsapp-icon"></span>
             </a>
           </li>
           <li>
@@ -129,17 +128,17 @@
   </header>
 
   <main>
-    <img src="img/daniel_medina_tariba.png" alt="Desarrollador Web Daniel Medina" title="Desarrollador Web Daniel Medina" class="avatar animate__animated animate__zoomIn">
+    <img src="img/daniel_medina.webp" alt="Desarrollador Web Daniel Medina" title="Desarrollador Web Daniel Medina" class="avatar">
     <div class="texto-main">
-      <h1 class="animate__animated animate__fadeInLeft">Daniel Medina</h1>
+      <h1>Daniel Medina</h1>
       <p class="parrafo-main"> - Front End Developer -</p>
 
       <div class="container-botones_cv">
-        <button class="animate__animated animate__bounceIn">
+        <button>
           <a href="https://drive.google.com/file/d/16ZiicWyAmV5QLdMFnhazovMxaKZqwCmK/view?usp=sharing" target="_blank">CV en Español</a>
         </button>
   
-        <button class="animate__animated animate__bounceIn">
+        <button>
           <a href="https://drive.google.com/file/d/1GLFud6zMxe-R2DwM383bcwEk0S6X_XEg/view?usp=sharing" target="_blank">English CV</a>
         </button>
       </div>
@@ -299,11 +298,6 @@
     </a>
   </div>
 
-  <!-------------------- MATERIALIZE -------------------->
-  <script src="https://cdn.boomcdn.com/libs/wow-js/1.3.0/wow.min.js"></script>
-  <script>
-    new WOW().init();
-  </script>
   <!-------------------- MATERIALIZE -------------------->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script>
