--- a/english.html
+++ b/english.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,100&family=Zilla+Slab:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="shortcut icon" href="img/daniel_medina_tariba.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/daniel_medina.webp" type="image/x-icon">
     <link rel="canonical" href="https://danielmedinatariba.com">
     <link rel="stylesheet" href="css/styles.css">
     <title>Web Developer | Daniel Medina</title>
