--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="desarrollo web, front end, html, css, javascript, web developer, Daniel Medina, Maquetador Web, Profesor">
+    <meta name="keywords" content="desarrollo web, front end, html, css, javascript, web developer, Daniel Medina, Maquetador Web, Profesor, seo, analisis seo, analytcs, search console">
     <meta property="og:title" content="Daniel Medina | Portfolio">
     <meta name="author" content="Daniel Medina Tariba" />
     <meta property="og:url" content="https://danielmedinatariba.com/" />
@@ -135,7 +135,7 @@
 
       <div class="container-botones_cv">
         <button>
-          <a href="https://drive.google.com/file/d/16ZiicWyAmV5QLdMFnhazovMxaKZqwCmK/view?usp=sharing" target="_blank">CV en Español</a>
+          <a href="https://drive.google.com/file/d/1AkkVHSqLqyXf6LJsx2ii9B-a7DSQ_D14/view?usp=sharing" target="_blank">CV en Español</a>
         </button>
   
         <button>
@@ -149,9 +149,19 @@
     <div class="container-secciones">
       <h2>Sobre mi</h2>
       <div class="container-secciones__textos">
-        <p>Hola a todos, les cuento un poco acerca de mi: Soy Abogado de profesión, pero decidí dar un giro a mi carrera y me incliné por la tecnología, específicamente por el <strong>Desarrollo Web Front End</strong>, estando siempre dispuesto a mantener las <strong>buenas prácticas de programación</strong>, de <strong>maquetación</strong> y de <strong>SEO</strong>, lo cual hace que me mantenga en aprendizaje constante.</p>
+        <p>Hola a todos, les cuento un poco acerca de mi: Soy Abogado de profesión, pero decidí dar un giro a mi carrera y me incliné por la tecnología, específicamente por el <strong>Desarrollo Web Front End</strong> y por la Optimización de Motores de Búsqueda <strong>SEO</strong>, manteniendo las buenas prácticas y en constante aprendizaje para hacer mi trabajo más eficiente.</p>
 
-        <p>Actualmente, me encuentro trabajando en <strong>Dentsu International</strong> realizando el mantenimiento y actualización del contenido de 141 sitios web de una importante red de concesionarios del rubro automotriz; trabajando en conjunto con un equipo que incluye otros Desarrolladores, Diseñadores Gráficos, Copywriters y Ejecutivos de Cuentas, definiendo estrategias muy enfocadas en buenas prácticas de Maquetación, UX/UI y SEO con el fin de potenciar la recepción de leads y por lo tanto las ventas de estos concesionarios.</p>
+        <p>Actualmente, me encuentro trabajando en <strong>Dentsu International</strong> realizando principalmente las siguientes actividades:
+          <ul class="lista-tareas">
+            <li>Desarrollo de contenido de los sitios web de la red de concesionarios de una reconocida marca automotriz, con foco en la <strong>generación de leads</strong> . Todo en conjunto con el equipo de Diseño y Redacción</li>
+            <li>Crear y aplicar planes enfocados a la mejora de <strong>SEO técnico y SEO On Page</strong>.
+            </li>
+            <li>Generar reportes en <em>Google Search Console</em> para seguimiento de las optimizaciones SEO, mediante la conexión con Looker Studio.</li>
+            <li>Recepción y comprensión de resultados de métricas SEM de <em>Adobe Analytics</em> para creación, modificación u optimización de código y funcionalidades</li>
+            <li>Trabajo conjunto con equipo sudamericano (Brasil, Colombia, Ecuador, Chile y Perú) y de USA, para estandarización e innovación de los sitios web de la red.</li>
+            <li>Reporte y seguimiento de bugs.</li>
+          </ul>
+        </p>
 
         <p>Además, me desempeño como <strong>Profesor</strong> del curso de <strong>Desarrollo Web</strong> de <strong>Coderhouse</strong>, lo que me motiva a estar siempre actualizado para brindarles una buena experiencia de aprendizaje a mis alumnos.</p>           
       </div>
@@ -162,9 +172,9 @@
     <div class="container-secciones">
       <h2>¿Qué hago?</h2>
       <div class="container-secciones__textos">
-        <p>Entre las tecnologías con las que más he trabajado están: <strong>HTML 5</strong>, <strong>CSS3</strong>, <strong> JavaScript</strong>, jQuery, Bootstrap, Materialize y SASS para todo lo relacionado con el desarrollo; <strong>GIT</strong> para control de versiones, y Github como repositorio de código.</p>
+        <p>Entre las tecnologías con las que más he trabajado están: <strong>HTML 5</strong>, <strong>CSS3</strong>, <strong> JavaScript</strong>, Bootstrap, Materialize y SASS para todo lo relacionado con el desarrollo; <strong>GIT</strong> para control de versiones, y Github como repositorio de código.</p>
 
-        <p>En cuanto a herramientas SEO estoy familiarizado con <strong>Google Analytics</strong>, <strong>Google Search Console</strong>, <strong>Google Tag Manager</strong>, y <strong>Adobe Analytics</strong>.</p>
+        <p>En cuanto a herramientas SEO tengo experiencia con <strong>Google Search Console</strong>, <strong>SEMRush</strong>, <strong>Ubersuggest</strong>, <strong>Adobe Analytics</strong> y en menor medida con <strong>Google Analytics 4</strong> y <strong>Screaming Frog</strong>. Además, como herramientas de visualización de métricas destaco <strong>Looker Studio</strong> y <strong>Power BI</strong></p>
 
         <div class="banner-techs">
           <div class="banner">
@@ -182,9 +192,20 @@
             <p>JavaScript</p>
           </div>
 
+          
           <div class="banner">
-            <img src="img/React-icon.svg" alt="React Js" title="Logo React Js">
-            <p>React Js</p>
+            <img src="img/bootstrap.svg" alt="Bootstrap" title="Logo Bootstrap">
+            <p>Bootstrap</p>
+          </div>
+          
+          <div class="banner">
+            <img src="img/materializecss.svg" alt="Materialize" title="Logo Materialize">
+            <p>Materialize</p>
+          </div>
+
+          <div class="banner">
+            <img src="img/file-type-scss.svg" alt="SASS" title="Logo SASS">
+            <p>SASS</p>
           </div>
 
           <div class="banner">
@@ -203,18 +224,33 @@
           </div>
 
           <div class="banner">
-            <img src="img/file-type-scss.svg" alt="SASS" title="Logo SASS">
-            <p>SASS</p>
+            <img src="img/google-analytics.svg" alt="Google Analytics" title="Logo Google Analytics">
+            <p>Google Analytics</p>
           </div>
 
           <div class="banner">
-            <img src="img/bootstrap.svg" alt="Bootstrap" title="Logo Bootstrap">
-            <p>Bootstrap</p>
+            <img src="img/Semrush_logo.svg" alt="SEMRush" title="Logo SEMRush">
+            <p>SEMRush</p>
           </div>
 
           <div class="banner">
-            <img src="img/materializecss.svg" alt="Materialize" title="Logo Materialize">
-            <p>Materialize</p>
+            <img src="img/adobe-analytics.svg" alt="Adobe Analytics" title="Logo Adobe Analytics">
+            <p>Adobe Analytics</p>
+          </div>
+
+          <div class="banner">
+            <img src="img/screamingfrog.svg" alt="Screaming Frog" title="Logo Screaming Frog">
+            <p>Screaming Frog</p>
+          </div>
+
+          <div class="banner">
+            <img src="img/power-bi.svg" alt="Power BI" title="Logo Power BI">
+            <p>Power BI</p>
+          </div>
+
+          <div class="banner">
+            <img src="img/looker-studio.svg" alt="Looker Studio" title="Logo Looker Studio">
+            <p>Looker Studio</p>
           </div>
         </div>
       </div>
