--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="desarrollo web, front end, html, css, javascript, web developer, Daniel Medina, Maquetador Web, Profesor, seo, analisis seo, analytcs, search console">
+    <meta name="keywords" content="desarrollo web, front end, html, css, javascript, web developer, Daniel Medina, Maquetador Web, Profesor, seo, analisis seo, analytics, search console">
     <meta property="og:title" content="Daniel Medina | Portfolio">
     <meta name="author" content="Daniel Medina Tariba" />
     <meta property="og:url" content="https://danielmedinatariba.com/" />
@@ -153,11 +153,11 @@
 
         <p>Actualmente, me encuentro trabajando en <strong>Dentsu International</strong> realizando principalmente las siguientes actividades:
           <ul class="lista-tareas">
-            <li>Desarrollo de contenido de los sitios web de la red de concesionarios de una reconocida marca automotriz, con foco en la <strong>generación de leads</strong> . Todo en conjunto con el equipo de Diseño y Redacción</li>
+            <li>Desarrollo de contenido de los sitios web de la red de concesionarios de una reconocida marca automotriz, con foco en la <strong>generación de leads</strong> . Todo en conjunto con el equipo de Diseño y Redacción.</li>
             <li>Crear y aplicar planes enfocados a la mejora de <strong>SEO técnico y SEO On Page</strong>.
             </li>
             <li>Generar reportes en <em>Google Search Console</em> para seguimiento de las optimizaciones SEO, mediante la conexión con Looker Studio.</li>
-            <li>Recepción y comprensión de resultados de métricas SEM de <em>Adobe Analytics</em> para creación, modificación u optimización de código y funcionalidades</li>
+            <li>Recepción y comprensión de resultados de métricas SEM de <em>Adobe Analytics</em> para creación, modificación u optimización de código y funcionalidades.</li>
             <li>Trabajo conjunto con equipo sudamericano (Brasil, Colombia, Ecuador, Chile y Perú) y de USA, para estandarización e innovación de los sitios web de la red.</li>
             <li>Reporte y seguimiento de bugs.</li>
           </ul>
