--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
             <li>Desarrollo de contenido de los sitios web de la red de concesionarios de una reconocida marca automotriz, con foco en la <strong>generación de leads</strong>. Todo en conjunto con el equipo de Diseño y Redacción.</li>
             <li>Crear y aplicar planes enfocados a la mejora de <strong>SEO técnico y SEO On Page</strong>.
             </li>
-            <li>Generar reportes en <em>Google Search Console</em> para seguimiento de las optimizaciones SEO, mediante la conexión con Looker Studio.</li>
-            <li>Recepción y comprensión de resultados de métricas SEM de <em>Adobe Analytics</em> para creación, modificación u optimización de código y funcionalidades.</li>
+            <li>Generar reportes en <strong>Google Search Console</strong> para seguimiento de las optimizaciones SEO, mediante la conexión con Looker Studio.</li>
+            <li>Recepción y comprensión de resultados de métricas SEM de <strong>Adobe Analytics</strong> para creación, modificación u optimización de código y funcionalidades.</li>
             <li>Trabajo conjunto con equipo sudamericano (Brasil, Colombia, Ecuador, Chile y Perú) y de USA, para estandarización e innovación de los sitios web de la red.</li>
             <li>Reporte y seguimiento de bugs.</li>
           </ul>
