--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="canonical" href="https://danielmedinatariba.com">
     <link rel="alternate" href="https://danielmedinatariba.com/english" hreflang="en-us">
-    <title>Desarrollador Web | Daniel Medina</title>
+    <title>Desarrollo Web & SEO | Daniel Medina</title>
 </head>
 <body>
   <header id="home" class="container-header">         
@@ -57,11 +57,6 @@
           </div>
           <div class="contenedor-redes redes_lg">
             <ul>
-              <li>
-                <a class="enlaces" href="english.html">
-                  ENG</span>
-                </a>
-              </li>
               <li>
                 <a class="enlaces" href="https://www.linkedin.com/in/medinataribadaniel/" target="_blank">
                   <span class="iconify" data-icon="logos:linkedin-icon" data-inline="false"></span>
@@ -98,11 +93,6 @@
       <div class="contenedor-redes">
         <ul>
           <li>
-            <a class="enlaces" href="english.html" target="_blank">
-              ENG</span>
-            </a>
-          </li>
-          <li>
             <a class="enlaces" href="https://www.linkedin.com/in/medinataribadaniel/" target="_blank">
               <span class="iconify" data-icon="logos:linkedin-icon" data-inline="false"></span>
             </a>
@@ -131,15 +121,11 @@
     <img src="img/daniel_medina.webp" alt="Desarrollador Web Daniel Medina" title="Desarrollador Web Daniel Medina" class="avatar">
     <div class="texto-main">
       <h1>Daniel Medina</h1>
-      <p class="parrafo-main"> - Front End Developer -</p>
+      <p class="parrafo-main">Desarrollo Web & SEO</p>
 
       <div class="container-botones_cv">
         <button>
-          <a href="https://drive.google.com/file/d/1AkkVHSqLqyXf6LJsx2ii9B-a7DSQ_D14/view?usp=sharing" target="_blank">CV en Español</a>
-        </button>
-  
-        <button>
-          <a href="https://drive.google.com/file/d/1GLFud6zMxe-R2DwM383bcwEk0S6X_XEg/view?usp=sharing" target="_blank">English CV</a>
+          <a href="https://drive.google.com/file/d/1AkkVHSqLqyXf6LJsx2ii9B-a7DSQ_D14/view?usp=sharing" target="_blank">Ver CV</a>
         </button>
       </div>
     </div>
